<resources>
    <string name="app_name">FlySafely</string>

    <!-- Fragments titles -->
    <string name="title_fragment_main" translatable="false">FlySafely</string>
    <string name="title_fragment_offers">Offers</string>
    <string name="title_fragment_alerts">Alerts</string>
    <string name="title_fragment_addalert">AddAlerts</string>
    <string name="title_fragment_detailalert">AlertsDetail</string>
    <string name="title_fragment_califications">Calificacions</string>
    <string name="title_fragment_settings">Settings</string>

    <!--drawerToggle-->
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!--Request errors-->
    <string name="processing_deals_error">Error in processing deals</string>
    <string name="download_deals_error">Error downloading offers. Try to check your internet. </string>

    <!--Home activity-->
    <string name="offer">Offers of the day</string>
    <string name="moreinfo">For more information go to www.FlySafely.com</string>

    <string name="permission_failed">You do not have location permissions</string>

    <!--Offers fragment-->
    <string name="offer_hint">Select a map destination for more information.</string>
    <string name="precio">Flight Price: </string>
    <string name="processing_nearCity_error">Error processing your nearby city</string>
    <string name="download_nearCity_error">Error in obtaining your nearby city. Try to verify your internet connection.</string>
    <string name="location_failed"> Location error, activate GPS and try again. Also check your internet connection.</string>
    <string name="city_not_found"> Connection failed. Check your internet signal and try again.</string>
    <string name="map_userpos_text"> You are here </string>

    <!--Experience Fragment-->
    <string name="calificate">Rate a specific flight</string>
    <string name="Aerolinea">Airline</string>
    <string name="NumeroDeVuelo">Flight number</string>
    <string name="Amabilidad">Friendliness</string>
    <string name="Comida">Food</string>
    <string name="Puntualidad">Punctuality</string>
    <string name="ProgramaDeViajerosFrecuentes">Frequent flyer program</string>
    <string name="Confort">Comfort</string>
    <string name="RelacionPrecioCalidad">Relacion precio calidad</string>
    <string name="General">General</string>
    <string name="LoRecomendariasAotro">Would you recommend it to another?</string>
    <string name="Si">Yes</string>
    <string name="No">No</string>
    <string name="Comentarios">Comment</string>
    <string name="Enviar">Send</string>
    <string name="loading_airlines">Downloading possible airlines from the server. Please wait...</string>
    <string name="processing_airlines_error">Error processing airline, please try again soon.</string>
    <string name="download_airlines_error">Error in downloading possible airlines, try again soon.</string>
    <string name="error_send">Connection error while submitting the form, try again soon.</string>
    <string name="network_error">Your mobile phone has no internet connection.</string>
    <string name="airline_error">Invalid Airline.</string>
    <string name="flightnumber_error">Invalid flight number.</string>
    <string name="error_succeed">Your form has been successfully submitted.</string>
    <string name="error_minRating">The minimum value is half star.</string>
    <string name="sending_calificate"> Sending review, please wait... </string>

    <!--database-->
    <string name="database_connection_failed"> Error connecting to server, try again soon</string>

    <!--ASyncTasks-->
    <string name="loading_offers"> Loading the day offers, please wait... </string>
    <string name="loading_map"> Loading the map with offers, please wait... </string>

    <!--MAP POPUP-->
    <string name="map_popup_description_1"> The markers on the map represent: </string>
    <string name="map_popup_description_2"> Purple: Your current position. </string>
    <string name="map_popup_description_3"> Green: prices lower than 325 dollars. </string>
    <string name="map_popup_description_4"> Yellow: Prices between 325 and 600 dollars. </string>
    <string name="map_popup_description_5"> Red: prices greater than 600 dollars. </string>
    <string name="map_popup_info"> Info </string>

    <!--ALERTS AND CONFIG-->
    <string name="action_settings">Settings</string>
    <string name="airlane_code_label">Airline code</string>
    <string name="flight_numbre_label">Flight number</string>
    <string name="save_button">Save</string>
    <string name="fields_incomplete_msg">You must complete all the fields.</string>
    <string name="invalid_flight">Flight not found. Verificate if bouth fields are correct.</string>
    <string name="conection_error">Check your internet connection.</string>
    <string name="request_error">Error in the search.</string>
    <string name="state_text">State: </string>
    <string name="flight_number_text">Flight number: </string>
    <string name="airlane_text">Airline: </string>
    <string name="date_text">Date: </string>
    <string name="departure_text">Departure: </string>
    <string name="arrival_text">Arrival: </string>
    <string name="terminal_text">Terminal: </string>
    <string name="gate_text">Gate: </string>
    <string name="baggageGate_text">Baggage gate: </string>
    <string name="flight_text">Flight: </string>
    <string name="scheduled_text">Scheduled</string>
    <string name="active_text">Active</string>
    <string name="landed_text">Landed</string>
    <string name="cancelled_text">Cancelled</string>
    <string name="diverted_text">Diverted</string>
    <string name="err_status">not state</string>
    <string name="terminal_dep_text">Departure terminal: </string>
    <string name="gate_dep_text">Departure gate: </string>
    <string name="terminal_arr_text">Arrival terminal: </string>
    <string name="gate_arr_text">Arrival gate: </string>
    <string name="baggate_arr_text">Arrival baggate: </string>
    <string name="time_dep_text">Departure time: </string>
    <string name="time_arr_text">Arrival time: </string>
    <string name="alert_delete">Deleted flight alert</string>
    <string name="language_text">Lenguage</string>
    <string name="notificarion_active_text">Enable notifications</string>
    <string name="notificarion_frequency_text">Frequency of notifications</string>
    <string name="one_minute_text">one minute</string>
    <string name="five_minute_text">five minutes</string>
    <string name="ten_minute_text">ten minutes</string>
    <string name="thirty_minute_text">thirty minutes</string>
    <string name="one_hour_text">one hour</string>
    <string name="sending_alerts"> Retreaving flight information, please wait... </string>

    <!--GOOGLE API KEY-->
    <string name="GOOGLE_API_KEY">AIzaSyCjr_dEpndv2sb7_ZRKfquScf-VmuVgT9s</string>

    <string name="english_text">English</string>
    <string name="spanish_text">Español</string>

    <string name="alerts_text">Alerts</string>
    <string name="offer_text">Offers</string>
    <string name="calificate_text">Calificacions</string>
    <string name="configuration_text">Settings</string>
    <string name="flights_text">Flight/s deleted</string>

</resources>
