<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:text="@string/airlane_code_label"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:textSize="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/aerolineaString" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText_AirlaneCode" />

    <TextView
        android:text="@string/flight_numbre_label"
        android:layout_marginLeft="5dp"
        android:textSize="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nVueloString" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText_FlightNumber"/>

    <Button
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="90dp"
        android:text="@string/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="64dp"
        android:paddingRight="64dp"
        android:id="@+id/save_button"

        />
</LinearLayout>