<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/language_text"
        android:textSize="18dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lenguage"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="7dp"
        android:layout_marginRight="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c3c3c3">
    </LinearLayout>

    <Switch
        android:layout_marginTop="7dp"
        android:text="@string/notificarion_active_text"
        android:textSize="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/switch_notificaion"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notificarion_frequency_text"
        android:textSize="18dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/time_notification"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="7dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c3c3c3">
    </LinearLayout>

</LinearLayout>